Fix public publish to npm

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "fix": "yarn lint --fix",
     "test": "jest --verbose --coverage"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "aws",
     "lambda",
